--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   
     .container {
       display: flex;
-      justify-content: center;
-      gap: 50px; /* Väli elementtien välillä */
+      justify-content: space-between;
+
     }
     .counter {
       font-size: 2rem;
