--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
 
     p {
     font-size: 20px;
-    margin-bottom: 20px; /* Tilaa kappaleen alapuolelle */
+    margin-bottom: 15px; /* Tilaa kappaleen alapuolelle */
     margin-top: 20px;
   }
-  
     .container {
       display: flex;
-      justify-content: space-between;
-
+      justify-content: center;
+      align-items: center; /* Keskittää elementit pystysuunnassa */
+      gap: 25px; /* Lisää väliä elementtien väliin */
     }
+
+      .counter-wrapper {
+  text-align: center;
+  max-width: 400px; /* Maksimikoko 400px */
+  margin: 10px; /* Lisää hieman tilaa elementtien väliin */
+}
     .counter {
       font-size: 2rem;
       margin: 20px 0;
