--- a/index.html
+++ b/index.html
@@ -17,21 +17,18 @@
 
     p {
     font-size: 20px;
-    margin-bottom: 15px; /* Tilaa kappaleen alapuolelle */
-    margin-top: 20px;
+    margin-bottom: 20px; /* Tilaa kappaleen alapuolelle */
   }
+
+  h2 {
+  font-size: 22px; /* Asettaa h2-fonttikoon 18 pikseliin */
+}
+  
     .container {
       display: flex;
       justify-content: center;
-      align-items: center; /* Keskittää elementit pystysuunnassa */
-      gap: 25px; /* Lisää väliä elementtien väliin */
+      gap: 50px; /* Väli elementtien välillä */
     }
-
-      .counter-wrapper {
-  text-align: center;
-  max-width: 400px; /* Maksimikoko 400px */
-  margin: 10px; /* Lisää hieman tilaa elementtien väliin */
-}
     .counter {
       font-size: 2rem;
       margin: 20px 0;
@@ -50,9 +47,9 @@
     }
 
     .comment {
-  font-size: 1.2rem;
-  color: #713671; /* Punainen väri kommentille */
-  margin-top: 30px; /* Lisää tilaa kommentin ja painikkeen väliin */
+    font-size: 1.2rem;
+    color: #713671; /* Punainen väri kommentille */
+    margin-top: 30px; /* Lisää tilaa kommentin ja painikkeen väliin */
 }
   </style>
 </head>
